# speclint-mcp

./: README.md  pyproject.toml  speclinter.py  test.py
