[project]
name = "speclinter"
version = "0.1.0"
description = "Semantic linter for software specs — find ambiguities before AI starts coding"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "openai>=1.30",
    "pydantic>=2.0",
    "tenacity>=8.0",
]

[project.scripts]
speclinter = "speclinter:_cli_entry"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["speclinter.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
